--- a/test.html
+++ b/test.html
@@ -26,8 +26,20 @@
     }, {
         direction: 'alternate',
         duration: 500,
-        iterations: Infinity,
+        iterations: 5,
     });
+
+    Promise.all(
+        elem.getAnimations().map(
+            function(animation) {
+                return animation.finished
+            }
+        )
+    ).then(
+        function() {
+            return console.log("Finished");
+        }
+    );
 </script>
 
 </body>
