--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
     }, {
         direction: 'alternate',
         duration: 500,
-        iterations: 5,
+        iterations: 5
     });
 
     Promise.all(
