--- a/test.html
+++ b/test.html
@@ -27,7 +27,8 @@
         direction: 'alternate',
         duration: 500,
         iterations: 5
-    }).then(
+    });
+    animation.then(
         function() {
             return console.log("Finished");
         }
