--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
         duration: 500,
         iterations: 5
     });
-    animation.then(
+    animation.finished.then(
         function() {
             return console.log("Finished");
         }
