--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
 
 <!-- Set up a target to animate -->
-<div class="pulse" style="width: 150px;">Hello world!</div>
+<div class="pulse" style="width: 150px;">Salut les gens!</div>
 
 <!-- Animate! -->
 <script>
